--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 API_URL = /api/v1
+SECRET = foofoo
 CONNECTIONSTRING = mongodb+srv://Harsheen:mernstack@cluster0.n5xaf.mongodb.net/eShop-database?retryWrites=true&w=majority
